<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="deti_women">得体-女人</string>
    <string name="deti_man">得体-男人</string>
    <string name="shopping_car">购物车</string>
    <string name="my_home_page">我的主页</string>
    <string name="phone_login">手机号登录</string>
    <string name="input_phone_number">输入手机号码</string>
    <string name="input_password">输入密码</string>
    <string name="look_for_password">找回密码</string>
    <string name="register_phone">手机号注册</string>
    <!--用户详情页-->
    <string name="style_like">喜欢的款式</string>
    <string name="designer_like">喜欢的设计师</string>
    <string name="foot_my">我的足迹</string>
    <string name="order_my">我的订单</string>
    <string name="look_all_good">查看全部已购商品</string>
    <string name="valley_my">我的钱包</string>
    <string name="coupon">我的优惠券</string>
    <string name="apply_fot_designer">申请成为签约独立设计师</string>
    <string name="help_center">帮助中心</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_like_designer">喜欢的设计师</string>
    <string name="get_designer">联系设计师</string>
    <string name="follow">+关注</string>
    <string name="cancel_follow">取消关注</string>
    <string name="cancel_follow_success">取消关注成功</string>
    <string name="follow_success">关注成功</string>
    <string name="get_verify">获取验证码</string>
    <string name="input_verify">输入验证码</string>
    <string name="set_password">设置密码 (8-32位非空字符)</string>
    <string name="input_password_again">再次输入新密码</string>
    <string name="finish">完成</string>
    <string name="verify_code_already">验证码短信已经发送，请查收</string>
    <string name="no_empty_or_no_phone">手机号不能为空或手机号无效</string>
    <string name="verifycation_code_no_empty">验证码不能为空</string>
    <string name="password_not_same">两次密码不一致</string>
    <string name="password_no_empty">密码不能为空</string>
    <string name="update_password_success">修改密码成功</string>
    <string name="register_success">注册成功</string>
    <string name="my_setting">我的设置</string>
    <string name="avatar_setting_text">头像</string>

<!-- 我的设置页面-->
    <string name="my_address">我的地址</string>
    <string name="my_size">我的尺码</string>
    <string name="update_password">修改密码</string>
    <string name="about_deti">关于得体</string>
    <string name="login_out">退出登录</string>
    <string name="keep_success">保存成功</string>
    <string name="address_manage">地址管理</string>
    <string name="get_goods_person">收件人:</string>
    <string name="select_province_city_county">选择省份/市/县 - 点击</string>
    <string name="phone">手机:</string>
    <string name="post_code">邮编:</string>
    <string name="street_address">街道地址</string>
    <string name="keep_address">保存地址</string>
    <!--以前程序的注释-->
    <string name="app_name">得体</string>
    <string name="user_name">账户名:</string>
    <string name="user_password">用户密码:</string>
    <string name="money">虚拟货币:</string>
    <string name="achievment">成就点数:</string>
    <string name="accept">接受</string>
    <string name="go_to_identity">点击这个按钮，你可以去实名认证哦！~</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="no_money">你的资金不足</string>

    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="phone_number">手机号</string>
    <string name="users_name">用户名</string>
    <string name="phone_prefix">+86</string>
    <string name="register_title">新玩家注册</string>
    <string name="no_empty">账号密码不能为空</string>
    <string name="count_rule_tip_msg">密码长度不小于8位，不大于32位</string>
    <string name="password_rule_tip_msg">密码长度不小于6位，不大于16位</string>
    <string name="character_rule_tip_msg">账号包含不允许的字符</string>

    <string name="password_tip_no_all_number">密码不能为纯数字</string>
    <string name="no_space">密码不能有空格</string>
    <string name="wrong_count_password">用户名或密码错误</string>
    <string name="login_success">登陆成功</string>
    <string name="user_exist">用户名已存在</string>
    <string name="click_start_task">选中几个标签，点击我开始任务吧，初始注册会送你10个币！</string>
    <string name="offer_rank">悬赏榜</string>
    <string name="super_man_rank">牛人榜</string>
    <string name="accept_success">接受成功</string>
    <string name="accept_fail">接受失败</string>
    <string name="not_receive">你的任务没人接受，不能确认完成</string>
    <string name="give_task">发任务</string>
    <string name="unknown_error">未知错误</string>
    <string name="my_task">已发布任务</string>
    <string name="trouble_title">为你的麻烦拟个标题吧，我们通过关键字推送给潜在的完成者</string>
    <string name="send_out">发送</string>
    <string name="send_content">这里是请求的具体内容</string>
    <string name="reward">赏金:</string>
    <string name="click_to_set_money">点击设置赏金</string>
    <string name="news_msg">你有一条新消息</string>
    <string name="news_msg_time">消息时间</string>
    <string name="offer_title">悬赏任务</string>
    <string name="offer_detail">任务详情</string>
    <string name="sufei_choice">苏菲的选择</string>
    <string name="choice">二战的回忆，集中营及她可怕的选择</string>

</resources>
