<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/white">
    <LinearLayout
            android:id="@+id/task_layout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <include
                layout="@layout/title_bar"></include>
        <EditText
                android:id="@+id/click_task_name"
                android:hint="@string/trouble_title"
                android:layout_width="fill_parent"
                android:layout_height="50dp"/>
        <EditText
                android:id="@+id/post_content"
                android:hint="@string/send_content"
                android:layout_width="fill_parent"
                android:layout_height="300dp"/>


    </LinearLayout>
    <EditText
            android:id="@+id/click_task_money"
            android:layout_marginRight="60dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_layout"
            android:layout_toRightOf="@+id/send_reward"
            android:textSize="25sp"
            android:hint="@string/click_to_set_money"
           />
    <TextView
            android:id="@+id/send_reward"
            android:layout_marginRight="60dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_layout"
            android:textSize="25sp"
            android:text="@string/reward"/>
    <TextView
            android:id="@+id/click_to_send"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:background="@color/green"
            android:text="@string/send_out"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_height="50dp"/>
</RelativeLayout>