<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="70dp"
              android:gravity="center"
              android:background="@color/white">

    <TextView
            android:id="@+id/notFinishedTaskName"
            android:layout_width="fill_parent" android:layout_height="70dp"
              android:layout_weight="2"

              android:text="@string/sufei_choice"
              android:textColor="#CD7F32"
              android:gravity="center"
              android:textSize="20sp"/>
    <TextView
            android:id="@+id/notFinishedTaskDetail"
            android:layout_marginLeft="5dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/choice"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    />
    <TextView
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:text="@string/accept"
            android:gravity="center"
            android:background="@color/green"


            />

</LinearLayout>