<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/title_bar"></include>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">
        <EditText
                android:id="@+id/register_phone"
                android:background="@drawable/login_edit_bg"
                android:hint="@string/input_phone_number"
                android:paddingLeft="8dp"
                android:textSize="15sp"

                android:layout_width="fill_parent"
                android:layout_height="50dp"/>
        <LinearLayout

                android:layout_marginTop="8dp"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
            <EditText
                    android:id="@+id/edit_code_register"
                    android:layout_width="0dp"
                    android:paddingLeft="8dp"
                    android:background="@drawable/login_edit_bg"
                    android:hint="@string/input_verify"
                    android:textSize="15sp"
                    android:layout_weight="3"

                    android:layout_height="50dp"/>
            <TextView
                    android:id="@+id/register_code"
                    android:layout_width="0dp"
                    android:background="@color/red"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="2"
                    android:text="@string/get_verify"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_height="fill_parent"/>

        </LinearLayout>
        <EditText
                android:id="@+id/register_set_password"
                android:layout_marginTop="25dp"
                android:layout_width="fill_parent"
                android:background="@drawable/login_edit_bg"
                android:hint="@string/set_password"
                android:paddingLeft="8dp"
                android:textSize="15sp"
                android:layout_height="50dp"/>
       <TextView
               android:layout_marginTop="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/read_rule_bg"/>
        <TextView
                android:id="@+id/register_finish"
                android:layout_width="fill_parent"
                android:layout_marginTop="25dp"
                android:background="@color/red"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/finish"
                android:layout_height="50dp"/>
    </LinearLayout>
</LinearLayout>