<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/white"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
<ImageView
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:layout_centerVertical="true"
        android:id="@+id/login_back"
        android:background="@drawable/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_login"
               android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:textSize="15sp"

                />
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/black"/>

    </RelativeLayout>
    <LinearLayout
            android:id="@+id/login_layout"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="22dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:background="@drawable/login_edit_bg"
            android:visibility="visible">
        <EditText
                android:id="@+id/login_user_name_edit"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:layout_marginTop="5dp"

                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:hint="@string/input_phone_number"
                android:textColorHint="@color/gray"
                android:background="@color/white"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textColor="@color/black"
                />
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@drawable/login_register_line"/>
        <EditText
                android:id="@+id/login_usr_password_edit"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:textColorHint="@color/gray"
                android:background="@color/white"
                android:hint="@string/input_password"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textColor="@color/black"
                />

    </LinearLayout>
    <TextView
            android:id="@+id/login_text"

            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="22dp"
            android:background="@color/red"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/login"/>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="50dp"
                      android:layout_marginLeft="15dp"
                      android:layout_marginRight="15dp"
                      android:layout_marginTop="15dp">
                <TextView
                        android:id="@+id/look_for_password"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:layout_marginRight="5dp"
                        android:text="@string/look_for_password"
                        android:background="@color/gray"/>
                <TextView
                        android:id="@+id/register_text"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@string/register"
                        android:background="@color/gray"/>

        </LinearLayout>
</LinearLayout>