<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp">
        <TextView
                android:id="@+id/offer_rank_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/offer_rank"
                android:gravity="center"
                android:textColor="@color/green"/>
        <TextView
                android:id="@+id/super_man_rank_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/super_man_rank"
                android:gravity="center"
                android:textColor="@color/green"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:background="@color/white">
        <View
                android:id="@+id/index_view"
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:background="@color/green"></View>
    </LinearLayout>
    <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black"></View>
    <LinearLayout
            android:id="@+id/describe"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            >
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/offer_title"
                android:textSize="20sp"
                android:gravity="center"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/offer_detail"
                android:textSize="20sp"
                android:gravity="center"
        ></TextView>

    </LinearLayout>
    <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black"></View>
    <ListView
            android:id="@+id/offer_rank_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="visible">
    </ListView>
    <ListView
            android:id="@+id/super_man_rank_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:visibility="gone">
    </ListView>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="悬赏"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/black"/>
</LinearLayout>