<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">
    <include
            layout="@layout/title_bar">
    </include>
    <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black"></View>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp">
        <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/phone_number"
                android:gravity="center"
                android:textColor="@color/green"/>
        <TextView
                android:id="@+id/userName"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/users_name"
                android:gravity="center"
                android:textColor="@color/green"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:background="@color/white">
        <View
                android:id="@+id/index_view"
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:background="@color/green"></View>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
        <RelativeLayout
                android:id="@+id/phone_number_layout"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                >
            <TextView
                    android:id="@+id/phone_prefix"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="@string/phone_prefix"
                    android:background="@drawable/edittext_bg"
                    android:textSize="15sp"/>
            <EditText
                    android:layout_toRightOf="@+id/phone_prefix"
                    android:layout_marginLeft="10dp"
                    android:layout_width="fill_parent"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/gray"
                    android:background="@drawable/edittext_bg"
                    android:layout_height="45dp"/>
            <TextView
                    android:id="@+id/next"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/phone_prefix"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:text="@string/next"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:background="@color/green"/>
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/users_name_layout"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >
            <LinearLayout
                    android:id="@+id/users_and_password_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/login_edit_bg"
                    >
                <EditText
                        android:id="@+id/user_name_edit"
                        android:paddingLeft="10dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dp"
                        android:singleLine="true"
                        android:layout_marginTop="5dp"

                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:hint="@string/user_name"
                        android:textColorHint="@color/gray"
                        android:background="@color/white"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        />
                <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/login_register_line"/>
                <EditText
                        android:id="@+id/usr_password_edit"
                        android:paddingLeft="10dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:singleLine="true"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:textColorHint="@color/gray"
                        android:background="@color/white"
                        android:hint="@string/user_password"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        />
            </LinearLayout>
            <TextView
                    android:id="@+id/users_register"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/users_and_password_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:text="@string/register"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:background="@color/green"/>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>