<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res/com.example.deti"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:background="@color/boy_friend_gray"
              android:layout_height="fill_parent"
        android:id="@+id/root_setting"
        >
<include layout="@layout/title_bar"></include>
    <RelativeLayout
            android:id="@+id/avatar_re_layout"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:layout_width="fill_parent"
            android:layout_marginBottom="30dp"
            android:layout_height="90dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/avatar_setting_text"/>
        <com.example.deti.widge.CircleImageView
                android:id="@+id/my_setting_avatar_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:src="@drawable/default_image_bg"
                app:border_width="2dp"
                app:border_color="@color/black"
                android:layout_toLeftOf="@+id/back_image_my_avatar"
                />
        <ImageView
                android:src="@drawable/icon_go"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:id="@+id/back_image_my_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@color/white">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"

                android:text="@string/my_address"/>
        <ImageView
                android:src="@drawable/icon_go"
                android:layout_gravity="right"
               android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@color/white">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"

                android:text="@string/my_size"/>
        <ImageView
                android:src="@drawable/icon_go"
                android:layout_gravity="right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@color/white">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"

                android:text="@string/update_password"/>
        <ImageView
                android:src="@drawable/icon_go"
                android:layout_gravity="right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@color/white">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"

                android:text="@string/about_deti"/>
        <ImageView
                android:src="@drawable/icon_go"
                android:layout_gravity="right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
    </RelativeLayout>
    <TextView
            android:layout_width="fill_parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/white"
            android:text="@string/login_out"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_height="55dp"/>
</LinearLayout>